RESOLVED FIXED267717
[WGSL] shader,execution,shader_io,compute_builtins:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267717
Summary [WGSL] shader,execution,shader_io,compute_builtins:* is failing
Tadeu Zagallo
Reported 2024-01-18 11:40:17 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-18 11:40:45 PST
Tadeu Zagallo
Comment 2 2024-01-18 11:48:31 PST
EWS
Comment 3 2024-01-19 07:46:30 PST
Committed 273219@main (e00eb7be3a35): <https://commits.webkit.org/273219@main> Reviewed commits have been landed. Closing PR #22927 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.