[WGSL] shader,execution,shader_io,compute_builtins:* is failing https://bugs.webkit.org/show_bug.cgi?id=267717 rdar://121207920

Reviewed by Mike Wyrzykowski.

When rewriting entry points to move builtin arguments from structs into top level
parameters we were using the name of the struct field. However, field names are
only unique within the struct, so when extracting fields from multiple structs they
could clash. In order to fix that we generate a new unique name for the parameter,
instead of using the name of the struct field. This doesn't affect the rest of the
program, since we reconstruct the struct anyway.

* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
(WGSL::EntryPointRewriter::materialize):
(WGSL::EntryPointRewriter::visit):

Canonical link: https://commits.webkit.org/273219@main